maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:53: error: value &&! is not a member of Boolean
    if (getIndication(x,y-1)==message-1 &&!aMurNord(x,y)){
                                        ^